# leela-logit-lens

./: .gitignore  README.md  pyproject.toml
bash_scripts/: evaluate_puzzles.sh  install_bayeselo.sh  install_stockfish.sh  run_tournament.sh
notebooks/: demo.ipynb  policy_metrics.ipynb  puzzle_results.ipynb  tournament_results.ipynb
scripts/: evaluate_puzzles.py  puzzle_history_augmentation.py  tournament.py
src/leela_logit_lens/: __init__.py
src/leela_logit_lens/core/: leela_logit_lens.py  leela_types.py
src/leela_logit_lens/tools/: evaluate_puzzles.py  plotting_helpers.py  puzzle_history_augmentation.py  sample_positions.py  tournament.py  utils.py
src/leela_logit_lens/tournament/: constants.py  logit_lens_engine.py
src/searchless_chess/: utils.py
src/searchless_chess/engines/: engine.py  lc0_engine.py  stockfish_engine.py
